asset/css/coursepress_front.css
/* Remove Pre- Nex- Navigation in WP 4.0+ */
.navigation.post-navigation {
  display: none;
}

.hidden {
  display: none;
}

/* Default Background for .alt */
/*
.alt {
    position: relative;
}
.alt:after {
    position: absolute;
    top: 0;
    left: 0;
    background: #000;
    display: block;
    width: 100%;
    content: '&nbsp;';
    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=2)";
    filter: alpha(opacity=2);
    -moz-opacity: 0.02;
    opacity: 0.02;
}
*/
/* Sub Menu */
.submenu.nav-submenu {
  list-style: outside none none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  overflow: hidden;
  margin: 0 0 20px 0;
  padding: 0;
}

.submenu-item {
  /*float: left;*/
  /*margin: 0 10px 50px;*/
  display: inline-block;
  margin: 0 10px 10px 0;
  padding: 0 0 10px 0;
  /*text-align: center;*/
}

.submenu.nav-submenu:after {
  /*content: '<hr />';*/
  /*display: block;*/
  /*min-height: 1px;*/
  /*height: 1px;*/
  /*width: 100%;*/
  /*background-color: #000000;*/
  /*opacity: 0.4;*/
  /*clear: both;*/
}

/* Unit Archive Styles */
.units-archive-list, .units-archive-list li {
  clear: both;
  list-style: none;
}

.units-archive-list li {
  clear: both;
  min-height: 60px;
}

.units-archive-list li .course-progress-disc-container {
  float: right;
}

.units-archive-list li .course-preview-container {
  float: right;
  font-size: 0.8em;
  font-style: oblique;
}

.units-archive-list .unit-archive-single-module-status {
  font-size: 0.7em;
  font-style: oblique;
  opacity: 0.5;
}

.units-archive-list .unit-archive-single {
  margin: 0 0 10px 0;
}

.units-archive-list .unit-archive-single p {
  margin: 0;
}

.li-locked-unit a {
  opacity: 0.4;
  text-decoration: none;
}

.li-locked-unit .unit-archive-single-title {
  text-decoration: none;
  border: none;
  cursor: not-allowed;
}

/* Module Styles */
.module-container ul {
  margin: 0;
  list-style: none;
  padding-left: 0;
}

.module-container .hide {
  display: none;
}

.module-container .is-mandatory {
  float: right;
  font-style: oblique;
  font-size: 0.7em;
  opacity: 0.5;
}

.module-container .is-mandatory:before {
  content: '* ';
}

.module-container .no-browser-support,
.module-container .module-submit-action {
  font-size: 0.9em;
  /*padding: 4px 10px;*/
  margin: 0.4em 0 0 0;
  /*background: none;*/
  /*display: inline-block;*/
  /*float: left;*/
  /*display: block;*/
  cursor: pointer;
  clear: both;
  border: none;
  text-decoration: underline;
}

.module-container .module-submit-action {
  margin-bottom: 1em;
}

.module-container .module-result,
.module-container .module-response {
  clear: both;
  font-size: 0.9em;
}

.module-container .module-response span.label {
  display: block;
}

.module-container .module-result {
  font-size: 0.8em;
  padding: 5px 10px;
  position: relative;
  overflow: hidden;
  border: 1px solid rgba(0, 0, 0, 0.1);
  z-index: 10;
}

.module-container .module-result .grade {
  float: left;
}

.module-container .module-result .feedback {
  clear: both;
}

.module-container .module-result .resubmit {
  float: right;
}

.module-container .module-result .resubmit a {
  cursor: pointer;
}

.module-container input[type=textbox],
.module-container input[type=text],
.module-container input[type=file],
.module-container select,
.module-container textarea {
  width: 100%;
}

.module-container .upload-progress {
  display: inline-block;
  font-size: 0.8em;
  padding: 0.5em;
  margin-left: 20px;
  float: left;
}

.module-container .upload-progress:after {
  display: block;
  clear: both;
  width: 100%;
}

.module-container .upload-progress .invalid-extension {
  color: #ff6666;
}

.module-container .spinner {
  display: inline-block;
  font-family: dashicons;
  font-size: 13px;
  height: 13px;
  line-height: 13px;
  text-align: center;
  vertical-align: middle;
  width: 13px;
}

/* Module Answers Chosen */
.module-container.input-checkbox .module-response li {
  position: relative;
}

.module-container.input-select .module-response li:before,
.module-container.input-radio .module-response li:before,
.module-container.input-checkbox .module-response li:before {
  content: '';
  vertical-align: middle;
  text-align: center;
  display: inline-block;
  margin-right: 4px;
  /*border: 1px solid #000000;*/
  opacity: 0.5;
  width: 11px;
  height: 12px;
  padding: 0;
  line-height: 6px;
  font-size: 13px;
}

.module-container.input-select .module-response li:before,
.module-container.input-radio .module-response li:before {
  border-radius: 15px;
  width: 11px;
  height: 11px;
  line-height: 8px;
  font-size: 17px;
}

.module-container.input-checkbox .module-response li.chosen-answer:before {
  content: '\25a0';
}

.module-container.input-select .module-response li:before,
.module-container.input-radio .module-response li.chosen-answer:before {
  content: '\2022';
}

.module-container.input-select .module-response li.chosen-answer.incorrect:after,
.module-container.input-select .module-response li.chosen-answer.correct:after,
.module-container.input-radio .module-response li.chosen-answer.incorrect:after,
.module-container.input-radio .module-response li.chosen-answer.correct:after,
.module-container.input-checkbox .module-response li.chosen-answer.incorrect:after,
.module-container.input-checkbox .module-response li.chosen-answer.correct:after {
  /*position: absolute;*/
  font-family: dashicons;
  display: inline-block;
  float: right;
  margin-right: 10px;
}

.module-container.input-select .module-response li.chosen-answer.correct:after,
.module-container.input-radio .module-response li.chosen-answer.correct:after,
.module-container.input-checkbox .module-response li.chosen-answer.correct:after {
  content: "\f147";
  font-size: 14px;
  line-height: 1em;
  padding-top: 0.6em;
  vertical-align: middle;
}
/* ... */

